--- a/apitest.html
+++ b/apitest.html
@@ -3,14 +3,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" /> 
-    <title>Somehting.com api test app</title>
+    <title>Mulberry symbols api test app</title>
     <script src='json2.js' type="text/javascript"></script>
     <script src="apitest.js" type="text/javascript"></script>
 </head>
 <body>
-<h1>Somehting.com api test</h1>
+<h1>Mullberry symbols api test</h1>
     <form id="the_form" action="" onsubmit='submitForm(); return true;/* so address bar updated*/'">
-        <p>This example web application demonstrates how the <a href='/api/usage'>somehting.com api</a> can be used in a client side web app. 
+        <p>This example web application demonstrates how the <a href='/api/usage'>Mulberry symbols api</a> can be used in a client side web app. 
         It provides example code that exercises the api and demonstrates the use some of the API features. 
         This is in no way intended to be a complete application, or be without issues that would be resolved in a released solution.</p>
         <p>Hint: try searching for 'sweet' or 'food'.</p>
